--- a/aidcare-backend/requirements.txt
+++ b/aidcare-backend/requirements.txt
@@ -40,5 +40,10 @@ openai==1.82.0
 requests==2.32.3
 httpx==0.28.1
 
+# Authentication
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.3
+
 # Utilities
 python-dateutil==2.9.0.post0
