--- a/aidcare-copilot/vercel.json
+++ b/aidcare-copilot/vercel.json
@@ -1,4 +1,7 @@
 {
   "buildCommand": "npm run build",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "env": {
+    "NEXT_PUBLIC_API_BASE_URL": "https://cavista2026-production.up.railway.app"
+  }
 }
